Galapix 0.0.3 (4. Sep 2008)
===========================

* include fix for gcc 4.3


Galapix 0.0.2 (4. Sep 2008)
===========================

* initial release


# EOF #